--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<h3>
-  Lista uzytkownika {{ username }}
-  <h6>
+<h3 class="bg-primary text-center text-white p-2">
+  Lista użytkownika {{ username }}
+  <h6 class="mt-1">
     Liczba elementów: {{ itemCount }}
   </h6>
 </h3>
