--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,19 @@
     Liczba elementów: {{ itemCount }}
   </h6>
 </h3>
+
+<table class="table table-striped table-bordered table-sm">
+  <thead>
+    <tr><th>#</th><th>Zadanie</th><th>Wykonane</th></tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let item of items; let i = index">
+      <td>{{ i + 1 }}</td>
+      <td>{{ item.task }}</td>
+      <td [ngSwitch]="item.complete">
+        <span *ngSwitchCase="true">Tak</span>
+        <span *ngSwitchDefault="false">Nie</span>
+      </td>
+    </tr>
+  </tbody>
+</table>
