--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,19 +5,34 @@
   </h6>
 </h3>
 
-<table class="table table-striped table-bordered table-sm">
-  <thead>
-    <tr><th>#</th><th>Zadanie</th><th>Wykonane</th></tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let item of items; let i = index">
-      <td>{{ i + 1 }}</td>
-      <td>{{ item.task }}</td>
-      <td><input type="checkbox" [(ngModel)]="item.complete" /></td>
-      <td [ngSwitch]="item.complete">
-        <span *ngSwitchCase="true">Tak</span>
-        <span *ngSwitchDefault="false">Nie</span>
-      </td>
-    </tr>
-  </tbody>
-</table>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col">
+      <input class="form-control" placeholder="Wpisz zadanie do wykonania" #injectionText />
+    </div>
+    <div class="col-auto">
+      <button class="btn btn-success" (click)="addItem(injectionText.value)">
+        Dodaj
+      </button>
+    </div>
+  </div>
+</div>
+
+<div class="m-2">
+  <table class="table table-striped table-bordered table-sm">
+    <thead>
+      <tr><th>#</th><th>Zadanie</th><th>Wykonane</th></tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of items; let i = index">
+        <td>{{ i + 1 }}</td>
+        <td>{{ item.task }}</td>
+        <td><input type="checkbox" [(ngModel)]="item.complete" /></td>
+        <td [ngSwitch]="item.complete">
+          <span *ngSwitchCase="true">Tak</span>
+          <span *ngSwitchDefault="false">Nie</span>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
