--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h3 class="bg-primary text-center text-white p-2">
   Lista użytkownika {{ username }}
   <h6 class="mt-1">
-    Liczba elementów: {{ itemCount }}
+    Zastrzyki{{ showComplete ? "" : " pozostałe do wykonania" }}: {{ itemCount }}
   </h6>
 </h3>
 
@@ -28,11 +28,20 @@
         <td>{{ i + 1 }}</td>
         <td>{{ item.task }}</td>
         <td><input type="checkbox" [(ngModel)]="item.complete" /></td>
-        <td [ngSwitch]="item.complete">
+        <!-- <td [ngSwitch]="item.complete">
           <span *ngSwitchCase="true">Tak</span>
-          <span *ngSwitchDefault="false">Nie</span>
-        </td>
+          <span *ngSwitchDefault="false">Nie</span> -->
+        <!-- </td> -->
       </tr>
     </tbody>
   </table>
+</div>
+
+<div class="bg-secondary text-white text-center p-2">
+  <div class="form-check">
+    <input class="form-check-input" type="checkbox" [(ngModel)]="showComplete" />
+    <label class="form-check-label" for="defaultCheck1">
+      Pokaż wykonane zadania
+    </label>
+  </div>
 </div>
